--- a/index.html
+++ b/index.html
@@ -8,5 +8,7 @@
     <script type="module" src="./js/task-2.js"></script>
     <script type="module" src="./js/task-3.js"></script>
   </head>
-  <body></body>
+  <body>
+    <h1>Hello, world!</h1>
+  </body>
 </html>
